feat(*): Refactoring creating and persisting a scorecard